adjust agetest path

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
 	server_name demo.convenantgemeenten.nl/agetest;
 
 	location / {
-		proxy_pass http://agetest-service:8080/;
+		proxy_pass http://agetest-service:8080/agetest;
 	}
 }
 
