adjust agetest path

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 server {
-	server_name demo.convenantgemeenten.nl/agetest;
+	server_name demo.convenantgemeenten.nl;
 
-	location / {
-		proxy_pass http://agetest-service:8080/agetest;
+	location /agetest/ {
+		proxy_pass http://agetest-service:8080/;
 	}
 }
 
