--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,9 @@ server {
 	location /agetest/ {
 		proxy_pass http://agetest-service:8080/;
 	}
+	location /kinsmantest/ {
+		proxy_pass http://agetest-service:8080/;
+	}
 }
 
 server {
