--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
 		proxy_pass http://agetest-service:8080/;
 	}
 	location /kinsmantest/ {
-		proxy_pass http://agetest-service:8080/;
+		proxy_pass http://kinsmantest-service:8080/;
 	}
 }
 
