--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
 server {
 	server_name demo.convenantgemeenten.nl;
 
-	location /agetest/ {
-		proxy_pass http://agetest-service:8080/;
+	location /agetest {
+		proxy_pass http://agetest-service:8080;
 	}
-	location /kinsmantest/ {
-		proxy_pass http://kinsmantest-service:8080/;
+	location /kinsmantest {
+		proxy_pass http://kinsmantest-service:8080;
 	}
 }
 
