--- a/nginx.conf
+++ b/nginx.conf
@@ -7,15 +7,18 @@ server {
 	location /kinsmantest/ {
 		proxy_pass http://kinsmantest-service:8080/;
 	}
-}
-
-server {
-    server_name convenantgemeenten.nl;
-    
-	location / {
-		proxy_pass http://weddingplanner:8081/;
+	location /guardianshiptest/ {
+		proxy_pass http://guardianshiptest-service:8080/;
 	}
 }
+
+#server {
+#    server_name convenantgemeenten.nl;
+#    
+#	location / {
+#		proxy_pass http://weddingplanner:8081/;
+#	}
+#}
 
 #server {
 #    server_name ns.convenantgemeenten.nl;
