--- a/nlx/service-config.toml
+++ b/nlx/service-config.toml
@@ -3,15 +3,22 @@
 # This block defines an API exposed by this inway.
 # A single inway can expose multiple API's, therefore this block can be added multiple times.
 # The name of the API (in this example SwaggerPetstore) must be unique for each block.
-    [services.AgeTestService2]
+    [services.Leeftijdstoets]
     endpoint-url = "http://demo.convenantgemeenten.nl/agetest"
     documentation-url = "http://demo.convenantgemeenten.nl/agetest"
     api-specification-document-url = "https://raw.githubusercontent.com/convenantgemeenten/AgeTest-API/master/openapi.yaml"
     authorization-model = "none"
 
-    [services.KinsmanTestService2]
+    [services.Bloedverwantschapstoets]
     endpoint-url = "http://demo.convenantgemeenten.nl/kinsmantest"
     documentation-url = "http://demo.convenantgemeenten.nl/kinsmantest"
     api-specification-document-url = "https://raw.githubusercontent.com/convenantgemeenten/KinsmanTest-API/master/openapi.yaml"
     authorization-model = "none"
+
+    [services.Curateletoets]
+    endpoint-url = "http://demo.convenantgemeenten.nl/guardianshiptest"
+    documentation-url = "http://demo.convenantgemeenten.nl/guardianshiptest"
+    api-specification-document-url = "https://raw.githubusercontent.com/convenantgemeenten/GuardianshipTest-API/master/openapi.yaml"
+    authorization-model = "none"
+
 
